<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/_bg__launch_screen_ek2_color"
    android:orientation="vertical"
    tools:context=".Signup">

    <TextView
        android:id="@+id/Appname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="20sp"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="20dp"
        android:textStyle="bold"
        android:text="@string/quicknote_string" />

    <TextView
        android:id="@+id/heading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="23sp"
        android:textStyle="bold"
        android:layout_marginTop="30dp"
        android:textColor="@color/title_color"
        android:text="@string/create_a_free_account_string" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="17sp"
        android:layout_marginHorizontal="50dp"
        android:layout_marginTop="30dp"
        android:text="@string/join_quicknote" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="70dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="45dp"
            android:textSize="19sp"
            android:textColor="@color/title_color"
            android:text="@string/full_name_string" />

        <EditText
            android:id="@+id/Name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="45dp"
            android:layout_marginTop="5dp"
            android:ems="10"
            android:elegantTextHeight="true"
            android:inputType="text"
            android:layout_marginBottom="20dp"
            android:hint="@string/sithum_pramuditha_string" />


        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="45dp"
            android:textSize="19sp"
            android:textColor="@color/title_color"
            android:text="@string/email_address_string" />
        <EditText
            android:id="@+id/Email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="45dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="20dp"
            android:ems="10"
            android:elegantTextHeight="true"
            android:inputType="textEmailAddress"
            android:hint="@string/sithumpramuditha_gmail_com_string" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="45dp"
            android:textSize="19sp"
            android:textColor="@color/title_color"
            android:text="@string/password_string" />

        <EditText
            android:id="@+id/Password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="45dp"
            android:layout_marginTop="5dp"
            android:ems="10"
            android:elegantTextHeight="true"
            android:inputType="textPassword"
            android:hint="@string/string" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="50dp"
            android:orientation="vertical">

            <Button
                android:id="@+id/buttonsignup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="110dp"
                android:layout_marginTop="25dp"
                android:layout_marginBottom="35dp"
                android:backgroundTint="@color/_bg__button_main_color"
                android:gravity="center"
                android:onClick="Buttonclick"
                android:text="@string/text_stringcreate"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/haveaccount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/already_have_an_account__string"
                android:textColor="@color/already_have_an_account__color"
                android:textSize="17sp"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>