<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/_bg__launch_screen_ek2_color"
    android:orientation="vertical"
    tools:context=".Login">

    <TextView
        android:id="@+id/Appname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:text="@string/quicknote_string"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/heading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:gravity="center"
        android:text="@string/welcome_back_string"
        android:textColor="@color/title_color"
        android:textSize="23sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50dp"
        android:layout_marginTop="42dp"
        android:gravity="center"
        android:text="@string/login_to_your_account_string"
        android:textStyle="bold"
        android:textSize="19sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="80dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="45dp"
            android:textSize="19sp"
            android:textColor="@color/title_color"
            android:text="@string/email_address_string" /> />

        <EditText
            android:id="@+id/Email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="45dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="20dp"
            android:ems="10"
            android:elegantTextHeight="true"
            android:inputType="textEmailAddress"
            android:hint="@string/sithumpramuditha_gmail_com_string" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="45dp"
            android:textSize="19sp"
            android:textColor="@color/title_color"
            android:text="@string/password_string" />

        <EditText
            android:id="@+id/Password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="45dp"
            android:layout_marginTop="5dp"
            android:ems="10"
            android:elegantTextHeight="true"
            android:inputType="textPassword"
            android:hint="@string/string" />

        <Button
            android:id="@+id/buttonsignup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="110dp"
            android:layout_marginTop="30dp"
            android:backgroundTint="@color/_bg__button_main_color"
            android:gravity="center"
            android:onClick="Buttonclick"
            android:text="@string/text_stringlogin"
            android:textSize="20sp" />
    </LinearLayout>


</LinearLayout>