<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/_bg__launch_screen_ek2_color"
    android:fillViewport="true"
    android:orientation="vertical">

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Profile">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_marginTop="20dp"
        android:layout_height="70dp">

        <ImageView
            android:id="@+id/imageback"
            android:layout_width="80dp"
            android:layout_height="20dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/back" />

        <TextView
            android:id="@+id/Appname"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/quicknote_string"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:layout_editor_absoluteY="954dp" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/heading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="23sp"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        android:textColor="@color/title_color"
        android:text="@string/edit_profile_string" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/boy" />


    <TextView
        android:id="@+id/textView7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="17sp"
        android:layout_marginHorizontal="50dp"
        android:layout_marginTop="30dp"
        android:text="@string/change_picture_string" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="50dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="45dp"
            android:textSize="19sp"
            android:textColor="@color/title_color"
            android:text="@string/full_name_string" />

        <EditText
            android:id="@+id/Name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="45dp"
            android:layout_marginTop="5dp"
            android:ems="10"
            android:elegantTextHeight="true"
            android:inputType="text"
            android:layout_marginBottom="20dp"
            android:text="@string/sithum_pramuditha_string" />


        <TextView
            android:id="@+id/textname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="45dp"
            android:textSize="19sp"
            android:textColor="@color/title_color"
            android:text="@string/email_address_string" />
        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="45dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="20dp"
            android:ems="10"
            android:elegantTextHeight="true"
            android:inputType="textEmailAddress"
            android:hint="@string/evftbyvvcd_string" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <Button
                android:id="@+id/updatebutton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="75dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="30dp"
                android:text="@string/update_string"
                android:backgroundTint="@color/title_color"/>

            <Button
                android:id="@+id/deletebutton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="75dp"
                android:backgroundTint="@color/already_have_an_account__color"
                android:text="@string/delete_account_string" />

        </LinearLayout>

    </LinearLayout>


</LinearLayout>
</ScrollView>