<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center"
    tools:context=".Onboard">

    <ImageView
        android:id="@+id/image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        app:srcCompat="@drawable/gemini_generated_image__3__1" />

    <TextView
        android:id="@+id/texthead"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_string"
        android:gravity="center"
        android:textSize="24sp"
       android:layout_marginHorizontal="20dp"
        android:layout_marginTop="10dp"
        android:textStyle="bold"
        android:textColor="@color/title_color" />

    <TextView
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/description_string"
        android:gravity="center"
        android:layout_marginTop="25dp"
        android:layout_marginHorizontal="75dp"
        android:textSize="20sp"
        android:textColor="@color/description_color" />

    <Button
        android:id="@+id/buttonstart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/_bg__button_ek1_color"
        android:gravity="center"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="35dp"
        android:textSize="20sp"
        android:onClick="Buttonclick"
        android:layout_marginHorizontal="125dp"
        android:text="@string/text_string" />

    <TextView
        android:id="@+id/haveaccount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/already_have_an_account__string"
        android:textColor="@color/already_have_an_account__color"
        android:gravity="center"
        android:textSize="17sp"
        android:textStyle="bold" />
</LinearLayout>





