<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/_bg__launch_screen_ek2_color"
    android:orientation="vertical"
    tools:context=".Profile">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_marginTop="20dp"
        android:layout_height="70dp">

        <ImageView
            android:id="@+id/imageback"
            android:layout_width="80dp"
            android:layout_height="20dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/back" />

        <TextView
            android:id="@+id/Appname"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/quicknote_string"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:layout_editor_absoluteY="954dp" />
    </androidx.constraintlayout.widget.ConstraintLayout>
    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:src="@drawable/boy" />

    <TextView
        android:id="@+id/heading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="23sp"
        android:textStyle="bold"
        android:layout_marginTop="30dp"
        android:textColor="@color/title_color"
        android:text="@string/sithum_pramuditha_string" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="17sp"
        android:layout_marginHorizontal="50dp"
        android:layout_marginTop="30dp"
        android:text="@string/sithumpramuditha_gmail_com_string" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:layout_marginTop="80dp"
        android:layout_marginHorizontal="30dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageditprofile"
            android:layout_width="2dp"
            android:layout_height="20dp"
            android:layout_weight="1"
            android:src="@drawable/pen" />

        <TextView
            android:id="@+id/texteditprofile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="18sp"
            android:text="@string/edit_profile_string" />

        <ImageView
            android:id="@+id/editprofile"
            android:layout_width="2dp"
            android:layout_height="20dp"
            android:layout_weight="1"
            android:src="@drawable/forword" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:layout_marginTop="30dp"
        android:layout_marginHorizontal="30dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imagedarkmode"
            android:layout_width="2dp"
            android:layout_height="20dp"
            android:layout_weight="1"
            android:src="@drawable/moon" />

        <TextView
            android:id="@+id/textdarkmode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="18sp"
            android:text="@string/dark_mode_string" />

        <ImageView
            android:id="@+id/darkmode"
            android:layout_width="2dp"
            android:layout_height="20dp"
            android:layout_weight="1"
            android:src="@drawable/forword" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:layout_marginTop="30dp"
        android:layout_marginHorizontal="30dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imagelogout"
            android:layout_width="2dp"
            android:layout_height="20dp"
            android:layout_weight="1"
            android:src="@drawable/logout" />

        <TextView
            android:id="@+id/textlogout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="18sp"
            android:text="@string/log_out_string" />

        <ImageView
            android:id="@+id/logout"
            android:layout_width="2dp"
            android:layout_height="20dp"
            android:layout_weight="1"
            android:src="@drawable/forword" />
    </LinearLayout>

</LinearLayout>