<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LandingPage">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="30dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imagemenu"
            android:layout_width="2dp"
            android:layout_height="20dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/menu" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="18sp"
            android:textColor="@color/title_color"
            android:text="@string/all_notes_string" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="2dp"
            android:layout_height="20dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/searchsymbol" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal"
        tools:layout_editor_absoluteX="53dp">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_marginHorizontal="10dp"
            android:layout_height="200dp"
            android:ems="10"
            android:textSize="18sp"
            android:gravity="center|top"
            android:inputType="textMultiLine"
            android:hint="@string/content_create"
            android:layout_weight="1"
            android:layout_marginTop="120dp"
            android:backgroundTint="@color/_bg__launch_screen_ek2_color"
            android:background="@drawable/edittext_border"/>

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_marginHorizontal="10dp"
            android:layout_height="200dp"
            android:ems="10"
            android:textSize="18sp"
            android:gravity="center|top"
            android:inputType="textMultiLine"
            android:hint="@string/content_create"
            android:layout_weight="1"
            android:layout_marginTop="120dp"
            android:backgroundTint="@color/_bg__launch_screen_ek2_color"
            android:background="@drawable/edittext_border"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical"
        android:layout_marginTop="500dp"
        tools:layout_editor_absoluteX="41dp"
        tools:layout_editor_absoluteY="30dp">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/button2"
                android:layout_width="60dp"
                android:layout_height="65dp"
                android:layout_marginStart="175dp"
                android:layout_marginTop="270dp"
                android:layout_marginEnd="176dp"
                android:layout_marginBottom="79dp"
                android:backgroundTint="@color/_bg__button_main_color"
                android:text="@string/create_plus"
                android:textSize="25sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>